# Elden-CLIng

./: .gitignore  CMakeLists.txt  README.md
include/: Enemy.h  Entity.h  Game.h  Initialize.h  Item.h  Json.h  Location.h  Menu.h  Player.h  Random.h  Stats.h  UI.h  Window.h
src/: Game.cpp  Initialize.cpp  Main.cpp  Menu.cpp  UI.cpp
